# mri2fem-ii-chapter-3-code

./: .gitignore  LICENSE  README.md  convert_mesh.py  create_mesh.py  environment.yml  pyproject.toml  read_npz.py  refine_legacy.py  refine_mesh.py  stokes.py  stokes_dolfinx.py
.github/workflows/: docker_image.yml
docker/: Dockerfile
dolfin_implementation/: convert_legacy_h5_to_xdmf_files.py  pyproject.toml  refine_legacy.py  stokes.py
dolfinx_implementation/: pyproject.toml  stokes_solver.py
installation/: Dockerfile.dolfin  Dockerfile.dolfinx  environment_dolfin.yml  environment_dolfinx.yml
meshing/: convert_mesh.py  create_mesh.py  create_mesh_with_fenicsx.py  read_npz.py
stl_files/: cisterna.magna.stl  foramen-magnum.stl  lhchoroid.plexus.final.stl  rhchoroid.plexus.final.stl
